--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
+    <h1 class="text-white bg-black">Test Hallo!</h1>
     <!-- Custom scripts, edit above this line -->
     <script src="scripts/index.js"></script>
   </body>
